--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -42,7 +42,7 @@
 
                 <div class="right-header">
                     <h1 class="name">
-                        Hi, I'm <span>Curious Coder.</span>
+                        Hi, I'm <span>Kanza Jovita</span> <br>
                         A Web Developer
                     </h1>
                     <p>
@@ -69,14 +69,16 @@
             ABOUT ME SECTION
             {% endcomment %}
             <section class="section sec2 about" id="about">
+                
                 <div class="main-title mt-4">
                     <h2>
                         About <span>Me</span>
                         <span class="bg-text">my stats</span>
                     </h2>
                 </div>
-                <div class="about-container">
-                    <div class="left-about">
+
+                <div class="about-container container row">
+                    <div class="left-about mb-5">
                         <h4>Information About Me</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -138,9 +140,13 @@
                         </div>
                     </div>
                 </div>
+
+                {% comment %} Skills {% endcomment %}
                 <div class="about-stats">
                     <h4 class="stat-title">My Skills</h4>
+
                     <div class="progress-bars">
+
                         <div class="progress-bar">
                             <p class="prog-title">html5</p>
                             <div class="progress-con">
@@ -150,6 +156,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="progress-bar">
                             <p class="prog-title">javascript</p>
                             <div class="progress-con">
@@ -159,6 +166,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="progress-bar">
                             <p class="prog-title">python</p>
                             <div class="progress-con">
@@ -168,6 +176,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="progress-bar">
                             <p class="prog-title">css</p>
                             <div class="progress-con">
@@ -177,118 +186,49 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="progress-bar">
-                            <p class="prog-title">java</p>
-                            <div class="progress-con">
-                                <p class="prog-text">10%</p>
-                                <div class="progress">
-                                    <span class="java"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-bar">
-                            <p class="prog-title">rust</p>
-                            <div class="progress-con">
-                                <p class="prog-text">10%</p>
-                                <div class="progress">
-                                    <span class="rust"></span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
+
+                {% comment %} Timeline {% endcomment %}
                 <h4 class="stat-title">My Timeline</h4>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
+                <div class="timeline ">
+                    
+
+                    
+
+                        <div class="timeline-item ">
+                            <div class="timeline-icon">
+                                <i class="fas fa-briefcase"></i>
+                            </div>
+                            <p class="tl-duration">2010-present</p>
+                            <h5>Web Developer <span> - Microsoft</span></h5>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing
+                                elit. Similique recusandae unde excepturi cumque
+                                facere esse voluptas repellat dolorum totam
+                                veritatis, molestiae delectus possimus est
+                                laboriosam ducimus neque dolorem voluptatum
+                                asperiores.
+                            </p>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
+
+                        <div class="timeline-item">
+                            <div class="timeline-icon">
+                                <i class="fas fa-briefcase"></i>
+                            </div>
+                            <p class="tl-duration">2010-present</p>
+                            <h5>Web Developer <span>- Microsoft</span></h5>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing
+                                elit. Similique recusandae unde excepturi cumque
+                                facere esse voluptas repellat dolorum totam
+                                veritatis, molestiae delectus possimus est
+                                laboriosam ducimus neque dolorem voluptatum
+                                asperiores.
+                            </p>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
                     </div>
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- Microsoft</span></h5>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Similique recusandae unde excepturi cumque
-                            facere esse voluptas repellat dolorum totam
-                            veritatis, molestiae delectus possimus est
-                            laboriosam ducimus neque dolorem voluptatum
-                            asperiores.
-                        </p>
-                    </div>
+                    
                 </div>
             </section>
 
@@ -311,6 +251,8 @@
                         languages.
                     </p>
                     <div class="portfolios">
+
+                        
                         <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port2.jpg' %}" alt="port1" />
@@ -330,6 +272,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port3.jpg' %}" alt="port1" />
