--- a/Deel/static/css/style.css
+++ b/Deel/static/css/style.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary:#27AE60;
+  --color-secondary:red;
   --color-white:#ffffff;
   --color-black:#000;
   --color-grey0:#f8f8f8;
@@ -99,16 +99,7 @@ section {
 
 .active {
   display: block;
-  -webkit-animation: scaleAnim 1s ease-in-out;
-          animation: scaleAnim 1s ease-in-out;
-}
-@-webkit-keyframes scaleAnim {
-  0% {
-    transform: translateY(100%) scaleY(0);
-  }
-  100% {
-    transform: translateY(0%) scaleY(1);
-  }
+  animation: scaleAnim 1s ease-in-out;
 }
 @keyframes scaleAnim {
   0% {
@@ -314,6 +305,7 @@ section {
 .about-stats .progress-bars .progress-bar {
   display: flex;
   flex-direction: column;
+  background-color: #000;
 }
 .about-stats .progress-bars .progress-bar .prog-title {
   text-transform: uppercase;
@@ -329,7 +321,7 @@ section {
 .about-stats .progress-bars .progress-bar .progress-con .progress {
   width: 100%;
   height: 0.45rem;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-grey-6);
   margin-left: 1rem;
   position: relative;
 }
@@ -338,7 +330,7 @@ section {
   top: 0;
   left: 0;
   height: 100%;
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   transition: var(--transition-primary);
   width: 90%;
 }
@@ -664,6 +656,7 @@ section {
   align-self: flex-start;
   align-items: center;
   overflow: hidden;
+  text-decoration: none;
 }
 .main-btn .btn-text {
   padding: 0 2rem;
@@ -685,7 +678,12 @@ section {
   transition: var(--transition-primary);
   z-index: -1;
 }
+.main-btn:hover {
+  color: var(--color-white);
+}
 .main-btn:hover::before {
+  text-decoration: none;
+  color: var(--color-white);
   width: 100%;
   height: 100%;
   background-color: var(--color-secondary);
