--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -148,13 +149,17 @@
                     <div class="progress-bars">
 
                         <div class="progress-bar">
-                            <p class="prog-title">html5</p>
-                            <div class="progress-con">
-                                <p class="prog-text">90%</p>
-                                <div class="progress">
-                                    <span class="html"></span>
-                                </div>
+                            
+                                <p class="prog-title">html5</p>
+
+                                <div class="progress-con ">
+                                    <p class="prog-text">90%</p>
+                                    <div class="progress">
+                                        <span class="html"></span>
+                                    </div>
+                                
                             </div>
+                            
                         </div>
 
                         <div class="progress-bar">
@@ -502,7 +507,7 @@
                             <div class="contact-info">
                                 <div class="contact-item">
                                     <div class="icon">
-                                        <i class="fas fa-map-marker-alt"></i>
+                                        <i class="fas fa-map-marker-alt "></i>
                                         <span>Location</span>
                                     </div>
                                     <p>: London, United Kingdom</p>
@@ -585,8 +590,9 @@
                                             >Contact</span
                                         >
                                         <span class="btn-icon"
-                                            ><i class="fas fa-aero"></i
-                                        ></span>
+                                            >
+                                            <i class="fa fa-send" aria-hidden="true"></i>
+                                    </span>
                                     </a>
                                 </div>
                             </form>
