--- a/Deel/static/css/style.css
+++ b/Deel/static/css/style.css
@@ -242,6 +242,9 @@ section {
 }
 
 .header-content .right-header .name span {
+  border: 1px solid var(--color-primary);
+  height: 2rem;
+  font-size: 1.8rem;
   color: var(--color-secondary);
 }
 
@@ -293,8 +296,8 @@ section {
 .about-container .right-about .about-item .abt-text .small-text {
   padding-left: 3rem;
   position: relative;
-  text-transform: uppercase;
-  font-size: 1.2rem;
+  text-transform: capitalize;
+  font-size: 2rem;
   color: var(--color-grey-1);
   letter-spacing: 2px;
 }
@@ -346,8 +349,9 @@ section {
 }
 
 .about-stats .progress-bars .progress-bar .prog-title {
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 500;
+  font-size: 1.5rem;
 }
 
 .about-stats .progress-bars .progress-bar .progress-con {
@@ -433,7 +437,7 @@ section {
 
 .timeline .timeline-item {
   position: relative;
-  padding-left: 3rem;
+  padding-left: 2rem;
   border-left: 1px solid var(--color-grey-5);
 }
 
@@ -442,8 +446,8 @@ section {
   left: -15%;
   top: 0;
   background-color: var(--color-secondary);
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -451,7 +455,7 @@ section {
 }
 
 .timeline .timeline-item .timeline-icon i {
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .timeline .timeline-item .tl-duration {
@@ -466,9 +470,10 @@ section {
 
 .timeline .timeline-item h5 {
   padding: 1rem 0;
-  text-transform: uppercase;
-  font-size: 1.3rem;
+  text-transform: capitalize;
+  font-size: 1.8rem;
   font-weight: 600;
+  color: var(--color-grey-4);
 }
 
 .timeline .timeline-item h5 span {
@@ -484,6 +489,7 @@ section {
 .port-text {
   padding: 2rem 0;
   text-align: center;
+  color: var(--color-grey-3);
 }
 
 .portfolios {
@@ -856,6 +862,7 @@ section {
   .right-header .name {
     font-size: 2.5rem !important;
   }
+  
 
   .right-header .header-content .left-header .image {
     margin: 0 auto;
@@ -998,3 +1005,28 @@ section {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+.soft-skills {
+  width: 95%;
+}
+
+.skill {
+  margin-bottom: 1em;
+}
+.skill span {
+  font-size: 1.5rem;
+  color: var(--color-grey-1);
+}
+
+.sprogress-bar {
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.sprogress {
+  background-color: #4caf50;
+  height: 0.5em;
+  border-radius: 5px;
+}
