--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -319,12 +319,12 @@
                         </div>
                         <div class="portfolio-item">
                             <div class="image">
-                                <img src="{% static './images/port4.jpg' %}" alt="port1" />
+                                <img src="{% static './images/port8.jpg' %}" alt="port1" />
                             </div>
                             <div class="hover-items">
-                                <h3>Project Source</h3>
+                                <h3>Daycare Management System</h3>
                                 <div class="icons">
-                                    <a href="#" target="_blank" class="icons"
+                                    <a href="https://github.com/kanza-jovita/deel" target="_blank" class="icons"
                                         ><i class="fa-brands fa-github"></i
                                     ></a>
                                     <a href="#" target="_blank" class="icons"
@@ -338,12 +338,12 @@
                         </div>
                         <div class="portfolio-item">
                             <div class="image">
-                                <img src="{% static './images/port5.jpg' %}" alt="port1" />
+                                <img src="{% static './images/port9.jpg' %}" alt="port1" />
                             </div>
                             <div class="hover-items">
-                                <h3>Project Source</h3>
+                                <h3>Portfolio Site</h3>
                                 <div class="icons">
-                                    <a href="#" target="_blank" class="icons"
+                                    <a href="https://github.com/kanza-jovita/Portifolio-Site" target="_blank" class="icons"
                                         ><i class="fa-brands fa-github"></i
                                     ></a>
                                     <a href="#" target="_blank" class="icons"
@@ -379,9 +379,9 @@
                                 <img src="{% static './images/port7.jpg' %}" alt="port1" />
                             </div>
                             <div class="hover-items">
-                                <h3>Project Source</h3>
+                                <h3>Blog site</h3>
                                 <div class="icons">
-                                    <a href="#" target="_blank" class="icons"
+                                    <a href="https://github.com/kanza-jovita/My-Blog" target="_blank" class="icons"
                                         ><i class="fa-brands fa-github"></i
                                     ></a>
                                     <a href="#" target="_blank" class="icons"
@@ -516,7 +516,7 @@
                         <div class="left-contact">
                             <h4>Contact me here</h4>
                             <p>
-                                Do you have a project in mind? Want to hire me? or simply wanna chat? Feel free to Schedule a meeting
+                                Do you have a project in mind? Want to hire me? or simply wanna chat? Feel free to Schedule a meeting.
                             </p>
                             <div class="contact-info">
                                 <div class="contact-item">
