--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -48,9 +48,9 @@
                     </h1>
                     <p>
                         I'm a Web Developer who creates Unique Functional
-                        websites. I'm a software engineer driven by a desire to make a difference, to use technology as a force for good in the world.
-
-
+                        websites. Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Debitis eaque cum sapiente.
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -142,7 +142,7 @@
 
                         <div class="progress-bar">
                             
-                                <p class="prog-title">html</p>
+                                <p class="prog-title">html5</p>
 
                                 <div class="progress-con ">
                                     <p class="prog-text">90%</p>
@@ -175,26 +175,6 @@
                         </div>
 
                         <div class="progress-bar">
-                            <p class="prog-title">Wordpress</p>
-                            <div class="progress-con">
-                                <p class="prog-text">70%</p>
-                                <div class="progress">
-                                    <span class="python"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="progress-bar">
-                            <p class="prog-title">Typescript</p>
-                            <div class="progress-con">
-                                <p class="prog-text">30%</p>
-                                <div class="progress">
-                                    <span class="python"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="progress-bar">
                             <p class="prog-title">css</p>
                             <div class="progress-con">
                                 <p class="prog-text">70%</p>
@@ -213,8 +193,8 @@
                             <div class="sprogress-bar"><div class="sprogress" style="width: 95%; background-color: #000;"></div></div>
                         </div>
                         <div class="skill">
-                            <span>Team Work</span>
-                            <div class="sprogress-bar"><div class="sprogress" style="width: 90%; background-color: red;"></div></div>
+                            <span>Dancing</span>
+                            <div class="sprogress-bar"><div class="sprogress" style="width: 98%; background-color: red;"></div></div>
                         </div>
                         <div class="skill">
                             <span>Problem Solving</span>
@@ -300,7 +280,8 @@
                 </div>
                 <div>
                     <p class="port-text">
-                        Here is a collection of projects I have completed
+                        Here is my work that I've done in various programing
+                        languages.
                     </p>
                     <div class="portfolios">
 
@@ -467,8 +448,62 @@
                                 </p>
                             </div>
                         </div>
-
-                    
+                        <div class="blog">
+                            <img src="{% static './images/blog1.jpg' %}" alt="blog1" />
+                            <div class="blog-text">
+                                <h4>How to Create A Website</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laborum dolore vero omnis
+                                    suscipit impedit ex quaerat commodi
+                                    perspiciatis corporis quos quibusdam harum
+                                    rerum qui, nam mollitia quia labore,
+                                    voluptatum ea!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <img src="{% static './images/blog3.jpg' %}" alt="blog1" />
+                            <div class="blog-text">
+                                <h4>How to Create A Website</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laborum dolore vero omnis
+                                    suscipit impedit ex quaerat commodi
+                                    perspiciatis corporis quos quibusdam harum
+                                    rerum qui, nam mollitia quia labore,
+                                    voluptatum ea!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <img src="{% static './images/blog1.jpg' %}" alt="blog1" />
+                            <div class="blog-text">
+                                <h4>How to Create A Website</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laborum dolore vero omnis
+                                    suscipit impedit ex quaerat commodi
+                                    perspiciatis corporis quos quibusdam harum
+                                    rerum qui, nam mollitia quia labore,
+                                    voluptatum ea!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <img src="{% static './images/blog2.jpg' %}" alt="blog1" />
+                            <div class="blog-text">
+                                <h4>How to Create A Website</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laborum dolore vero omnis
+                                    suscipit impedit ex quaerat commodi
+                                    perspiciatis corporis quos quibusdam harum
+                                    rerum qui, nam mollitia quia labore,
+                                    voluptatum ea!
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -490,7 +525,12 @@
                         <div class="left-contact">
                             <h4>Contact me here</h4>
                             <p>
-                                Do you have a project in mind? Want to hire me? or simply wanna chat? Feel free to Schedule a meeting
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Deleniti, aut doloremque
+                                itaque odio sapiente in excepturi quod
+                                laudantium provident aperiam? Quaerat magni
+                                sequi voluptatibus praesentium dolorum fuga,
+                                ratione similique recusandae?
                             </p>
                             <div class="contact-info">
                                 <div class="contact-item">
@@ -498,28 +538,28 @@
                                         <i class="fas fa-map-marker-alt "></i>
                                         <span>Location</span>
                                     </div>
-                                    <p>Seeta, Bukerere</p>
+                                    <p>: London, United Kingdom</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-envelope"></i>
                                         <span>Email</span>
                                     </div>
-                                    <p>kanzajovita@gmail.com</p>
+                                    <p>:tellmeaboutyou@gmail.com</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-user-graduate"></i>
                                         <span>Mobile Number</span>
                                     </div>
-                                    <p>+256704279303/+256787346687</p>
+                                    <p>:+25670xxxxxxx</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-globe-africa"></i>
                                         <span>Languages</span>
                                     </div>
-                                    <p>English,Luganda,Swahili</p>
+                                    <p>:English,Luganda,Swahili</p>
                                 </div>
                             </div>
                             <div class="contact-icons">
@@ -527,13 +567,13 @@
                                     <a href="#" target="_blank"
                                         ><i class="fa-brands fa-facebook"></i
                                     ></a>
-                                    <a href="https://x.com/kanzashizug" target="_blank"
+                                    <a href="#" target="_blank"
                                         ><i class="fa-brands fa-twitter"></i
                                     ></a>
-                                    <a href="https://github.com/kanza-jovita" target="_blank"
+                                    <a href="#" target="_blank"
                                         ><i class="fa-brands fa-github"></i
                                     ></a>
-                                    <a href="https://www.youtube.com/channel/UCD_UTy3OZsqjhsNYuf8mhDA" target="_blank"
+                                    <a href="#" target="_blank"
                                         ><i class="fa-brands fa-youtube"></i
                                     ></a>
                                 </div>
@@ -541,49 +581,41 @@
                         </div>
 
                         <div class="right-contact">
-                            <form action="post" class="contact-form">
+
+                            
+
+                            <form method="post" class="contact-form">
+                                {% csrf_token %}
+
                                 <div class="input-control i-c-2">
-                                    <input
-                                        type="text"
-                                        required
-                                        placeholder="YOUR NAME"
-                                    />
-                                    <input
-                                        type="email"
-                                        name=""
-                                        id=""
-                                        placeholder="YOUR EMAIL"
-                                        required
-                                    />
+                                    <input type="text" required placeholder="YOUR NAME" name='name'/>
+                                    <input type="email" name="email" id="" placeholder="YOUR EMAIL" required  />
                                 </div>
-                                {% comment %} <div class="input-control">
-                                    <input
-                                        type="text"
-                                        required
-                                        placeholder="ENTER SUBJECT"
-                                    />
-                                </div> {% endcomment %}
+                                
                                 <div class="input-control">
                                     <textarea
-                                        name="inputtext"
+                                        name="message"
                                         id="inputtext"
                                         cols="15"
                                         rows="8"
                                         placeholder="Message Here"
                                     ></textarea>
                                 </div>
-                                <div class="submit-btn">
-                                    <a href="#" class="main-btn">
-                                        <span class="btn-text"
-                                            >Contact</span
-                                        >
-                                        <span class="btn-icon"
-                                            >
-                                            <i class="fa fa-aero" aria-hidden="true"></i>
-                                    </span>
-                                    </a>
+
+                                <div class="btn-con">
+                                    <button type="submit" href="#" class="main-btn">
+                                        <span class="btn-text">Submit</span>
+
+                                        
+                                        <div class=" btn-icon">
+                                            <i class="fa-regular fa-paper-plane "></i>
+                                        </div>
+                                    </button>
                                 </div>
-                            </form>
+
+                                
+                            </form> 
+
                         </div>
                     </div>
                 </div>
