--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -47,9 +47,7 @@
                         <span id="typewriter"></span>
                     </h1>
                     <p>
-                        I'm a Web Developer who creates Unique Functional
-                        websites. I'm a software engineer driven by a desire to make a difference, to use technology as a force for good in the world.
-
+                        I'm a web developer who creates unique and functional websites. As a software engineer, I'm passionate about making a positive impact and using technology to solve real-world problems.
 
                     </p>
                     <div class="btn-con">
@@ -167,7 +165,7 @@
                         <div class="progress-bar">
                             <p class="prog-title">python</p>
                             <div class="progress-con">
-                                <p class="prog-text">50%</p>
+                                <p class="prog-text">70%</p>
                                 <div class="progress">
                                     <span class="python"></span>
                                 </div>
@@ -266,7 +264,7 @@
                             {% comment %} <p class="tl-duration">2010-present</p> {% endcomment %}
                             <h5>Database Design & Management <span> </span></h5>
                             <p>
-                                Unlock valuable insights from your data with expertise in statistical analysis and predictive modeling. From exploratory data analysis to developing actionable recommendations.
+                                Optimize your data handling with advanced database design and management solutions. From schema design to performance tuning and data integrity, ensure your databases are robust, scalable, and efficient. 
                             </p>
                         </div>
 
@@ -277,7 +275,7 @@
                             {% comment %} <p class="tl-duration">2010-present</p> {% endcomment %}
                             <h5>DevOps <span> </span></h5>
                             <p>
-                                Unlock valuable insights from your data with expertise in statistical analysis and predictive modeling. From exploratory data analysis to developing actionable recommendations.
+                                Streamline your software development and IT operations with comprehensive DevOps solutions. Enhance collaboration, automate workflows, and improve deployment efficiency. 
                             </p>
                         </div>
                     </div>
@@ -456,14 +454,28 @@
                         <div class="blog">
                             <img src="{% static './images/blog2.jpg' %}" alt="blog1" />
                             <div class="blog-text">
-                                <h4>How to Create A Website</h4>
+                                <h4>My Software Engineering Journey</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Laborum dolore vero omnis
-                                    suscipit impedit ex quaerat commodi
-                                    perspiciatis corporis quos quibusdam harum
-                                    rerum qui, nam mollitia quia labore,
-                                    voluptatum ea!
+                                    Starting my journey in software engineering was one of the best decisions I've ever made. From the moment I wrote my first line of code, I knew I had embarked on an incredible adventure. The excitement of seeing my code come to life was unparalleled, and I was eager to dive deeper into this fascinating world.
+
+                                    I remember the thrill of writing my first "Hello, World!" program. It felt like unlocking a new dimension of creativity and problem-solving. The journey has been perfectly amazing, filled with moments of pure joy and satisfaction. However, like any worthwhile pursuit, it has also been tough at times. There were days when nothing seemed to make sense, and I questioned my abilities and choices.
+
+                                    Learning backend development was a significant milestone. The intricacies of server-side logic, databases, and APIs fascinated me, but mastering them was no small feat. It was a rollercoaster ride—full of highs and lows, triumphs and setbacks. Each bug I encountered felt like a puzzle to be solved, and each solution brought a sense of accomplishment.
+
+                                    One of the biggest challenges in software engineering is the constant learning curve. Technology evolves rapidly, and keeping up with the latest trends and tools can be overwhelming. There were times when I felt stuck, unable to debug an issue or understand a complex concept. But these moments taught me resilience and the importance of perseverance.
+
+                                    Throughout this journey, the support of the software engineering community has been invaluable. Whether it's through online forums, coding bootcamps, or mentorship programs, connecting with others who share the same passion has been incredibly motivating. Collaborating on projects, attending hackathons, and participating in masterclasses have all contributed to my growth and learning.
+
+                                    Enrolling in the Refactory Apprenticeship Program was a turning point.I delved into automation, machine learning, and continuous integration tools like Travis CI, GitHub Actions, Ansible, Puppet, and Uldera. Working on real-world projects, such as developing a music application and a donation application, honed my practical skills.
+
+                                    Currently, I'm working on a project involving Django for account verification, utilizing email verification codes. I'm also creating a professional web page to showcase my projects and skills.
+
+                                    Looking ahead, I aim to further specialize in database management and DevOps, integrating these areas to create efficient, scalable, and secure software solutions. The goal is to leverage my skills to contribute to impactful projects and continue learning and growing in this dynamic field.
+
+                                    Despite the challenges, the joy of creating something from scratch, solving problems, and constantly learning makes the journey incredibly rewarding. Each new project is an opportunity to apply what I've learned, push my boundaries, and innovate.
+
+                                    In conclusion,My software engineering journey is a continuous learning process, filled with challenges and achievements. Each experience adds to my knowledge and skills, paving the way for future success in this ever-evolving industry. I am grateful for the opportunities and excited for what lies ahead. The journey has just begun, and I look forward to the many adventures that await in the world of software engineering.
+
                                 </p>
                             </div>
                         </div>
@@ -498,7 +510,7 @@
                                         <i class="fas fa-map-marker-alt "></i>
                                         <span>Location</span>
                                     </div>
-                                    <p>Seeta, Bukerere</p>
+                                    <p>Seeta,Bukerere</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
