--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -47,10 +47,7 @@
                         <span id="typewriter"></span>
                     </h1>
                     <p>
-                        I'm a Web Developer who creates Unique Functional
-                        websites. Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Debitis eaque cum sapiente.
+                        I'm a web developer who creates unique and functional websites. As a software engineer, I'm passionate about making a positive impact and using technology to solve real-world problems.
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -142,7 +139,7 @@
 
                         <div class="progress-bar">
                             
-                                <p class="prog-title">html5</p>
+                                <p class="prog-title">html</p>
 
                                 <div class="progress-con ">
                                     <p class="prog-text">90%</p>
@@ -167,7 +164,27 @@
                         <div class="progress-bar">
                             <p class="prog-title">python</p>
                             <div class="progress-con">
-                                <p class="prog-text">50%</p>
+                                <p class="prog-text">70%</p>
+                                <div class="progress">
+                                    <span class="python"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="progress-bar">
+                            <p class="prog-title">Wordpress</p>
+                            <div class="progress-con">
+                                <p class="prog-text">70%</p>
+                                <div class="progress">
+                                    <span class="python"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="progress-bar">
+                            <p class="prog-title">Typescript</p>
+                            <div class="progress-con">
+                                <p class="prog-text">30%</p>
                                 <div class="progress">
                                     <span class="python"></span>
                                 </div>
@@ -193,7 +210,7 @@
                             <div class="sprogress-bar"><div class="sprogress" style="width: 95%; background-color: #000;"></div></div>
                         </div>
                         <div class="skill">
-                            <span>Dancing</span>
+                            <span>Teamwork</span>
                             <div class="sprogress-bar"><div class="sprogress" style="width: 98%; background-color: red;"></div></div>
                         </div>
                         <div class="skill">
@@ -595,12 +612,7 @@
                         <div class="left-contact">
                             <h4>Contact me here</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Deleniti, aut doloremque
-                                itaque odio sapiente in excepturi quod
-                                laudantium provident aperiam? Quaerat magni
-                                sequi voluptatibus praesentium dolorum fuga,
-                                ratione similique recusandae?
+                                Do you have a project in mind? Want to hire me? or simply wanna chat? Feel free to Schedule a meeting.
                             </p>
                             <div class="contact-info">
                                 <div class="contact-item">
@@ -608,28 +620,28 @@
                                         <i class="fas fa-map-marker-alt "></i>
                                         <span>Location</span>
                                     </div>
-                                    <p>: London, United Kingdom</p>
+                                    <p>Seeta,Bukerere</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-envelope"></i>
                                         <span>Email</span>
                                     </div>
-                                    <p>:tellmeaboutyou@gmail.com</p>
+                                    <p>kanzajovita@gmail.com</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-user-graduate"></i>
                                         <span>Mobile Number</span>
                                     </div>
-                                    <p>:+25670xxxxxxx</p>
+                                    <p>:+256704279303/+256787346687</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
                                         <i class="fas fa-globe-africa"></i>
                                         <span>Languages</span>
                                     </div>
-                                    <p>:English,Luganda,Swahili</p>
+                                    <p>English,Luganda,Swahili</p>
                                 </div>
                             </div>
                             <div class="contact-icons">
@@ -637,13 +649,13 @@
                                     <a href="#" target="_blank"
                                         ><i class="fa-brands fa-facebook"></i
                                     ></a>
-                                    <a href="#" target="_blank"
+                                    <a href="https://x.com/kanzashizug" target="_blank"
                                         ><i class="fa-brands fa-twitter"></i
                                     ></a>
-                                    <a href="#" target="_blank"
+                                    <a href="https://github.com/kanza-jovita" target="_blank"
                                         ><i class="fa-brands fa-github"></i
                                     ></a>
-                                    <a href="#" target="_blank"
+                                    <a href="https://www.youtube.com/channel/UCD_UTy3OZsqjhsNYuf8mhDA" target="_blank"
                                         ><i class="fa-brands fa-youtube"></i
                                     ></a>
                                 </div>
